[package]
name = "cream-pad"
version = "0.0.3"
description = "Cream Pad Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cream_pad"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = [] }
solana-security-txt = { version = "1.0.2", features = [] }
